# Reef

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
coral/sources/: calendar.yaml  email.yaml  gcal.yaml  gmail.yaml
scripts/: build_app.sh  register_demo_sources.py  snapshot.py
src/reef/: config.py
src/reef/agent/: coral.py  coral_query.py  tools.py
src/reef/app/: main.py
src/reef/audio/: formats.py  mic_source.py  ports.py  speaker_sink.py
src/reef/memory/: store.py  tools.py
src/reef/observability/: trace.py
src/reef/onboarding/: config.py  profile.py
src/reef/shell/: app.py  brief.py  daily_scheduler.py  deeplink.py  hotkey.py  menubar.py  notify.py  schedule.py  window_app.py
src/reef/shell/ui/: window.html
src/reef/snapshot/: jsonl.py  runner.py
src/reef/voice/: gemini_session.py  instructions.py  loop.py  ports.py
tests/fakes/: fake_audio.py  fake_voice.py
tests/fixtures/: README.md
tests/fixtures/coral/calendar/: events.jsonl
tests/fixtures/coral/email/: messages.jsonl
tests/integration/: test_audio_devices_smoke.py  test_coral_mcp.py  test_coral_query.py  test_gemini_smoke.py  test_session_persistence.py  test_showpiece_join.py  test_snapshot_roundtrip.py
tests/unit/: test_agent_tools.py  test_appconfig.py  test_brief.py  test_config.py  test_coral_guard.py  test_coral_query.py  test_daily_scheduler.py  test_deeplink.py  test_fake_audio.py  test_fake_voice.py  test_formats.py  test_instructions.py  test_jsonl.py  test_main_imports.py  test_memory_store.py  test_memory_tools.py  test_mic_gate.py  test_notify.py  test_profile.py  test_reef_app_imports.py  test_schedule.py  test_shell_imports.py  test_snapshot_runner.py  test_trace.py  test_voice_loop.py
