[project]
name = "reef"
version = "0.1.0"
description = "Reef — a macOS voice-first founder's-day assistant"
requires-python = ">=3.11"
dependencies = [
    "google-adk[db]>=2.0.0",
    "google-genai",
    "mcp",
    "sounddevice",
    "aiosqlite",
    "greenlet>=3.5.1",  # transitive SQLAlchemy(async) dep; pinned explicitly (arm64/py3.13 marker gap)
    "rumps",
    "pynput",
]

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
markers = [
    "integration: requires network or audio hardware (run with -m integration)",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reef"]
