[project]
name = "reef"
version = "0.1.0"
description = "Reef — a macOS voice-first founder's-day assistant"
requires-python = ">=3.11"
dependencies = [
    "google-adk[db]>=2.0.0",
    "google-genai",
    "mcp",
    "sounddevice",
    "aiosqlite",
    "greenlet>=3.5.1",  # transitive SQLAlchemy(async) dep; pinned explicitly (arm64/py3.13 marker gap)
    "rumps",
    "pynput",
    "pywebview",   # native WKWebView window for the chat-style app UI
]

[project.scripts]
reef          = "reef.app.main:cli"           # terminal mode (kept for headless dev / trace recording)
reef-app      = "reef.shell.window_app:main"  # window app (native WebView, chat-style UI)
reef-menubar  = "reef.shell.app:main"         # legacy menubar-only variant

[dependency-groups]
# py2app currently breaks against setuptools 80+ ("install_requires is no longer supported");
# pin to a known-working range for bundling. Runtime code doesn't depend on setuptools.
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "py2app", "setuptools<70"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
markers = [
    "integration: requires network or audio hardware (run with -m integration)",
]
addopts = "-m 'not integration'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reef"]

# Ship the WebView UI assets (HTML/CSS/JS) inside the wheel so `uv run reef-app`
# and any future `.app` bundle both find them via `Path(__file__).parent/ui/`.
[tool.hatch.build.targets.wheel.force-include]
"src/reef/shell/ui" = "reef/shell/ui"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]   # don't fail on long lines (docstrings/prompts)

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # third-party (google.adk, rumps, pynput, sounddevice, aiosqlite, mcp) ship no stubs
check_untyped_defs = true
files = ["src/reef"]
